Add website description for SEO. Add spacing for mobile. Change active position filter color.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Create custom fantasy football rankings for your draft."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/draftabl_logo_blue.svg" />
     <!--
