Sitemap and new description for google seo.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Create custom fantasy football rankings for your draft."
+      content="Dominate your fantasy football draft with Draftabl's free draft tools.
+      Create cheat sheets, customize your rankings with tiers, and view expert draft 
+      rankings aggregated from across the industry."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/draftabl_logo_blue.svg" />
     <!--
